--- a/_posts/2022-02-23-前端复习之路-TS篇.md
+++ b/_posts/2022-02-23-前端复习之路-TS篇.md
@@ -43,6 +43,7 @@ var sisterAn = 0 /* Color.Red */;
 * type 可以描述基本类型、联合类型、元组等，interface 只能描述对象
 * type 可以使用 typeof 获取实例的类型，interface 不行
 * interface 可以声明合并，type 不能
+* interface 可以继承接口，type 不能
 
 ## any 和 unknown 的区别
 any 类型表示任意类型，unknown 表示未知类型，any 和 unknown 都可以赋值给任意类型。
