--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -1,25 +1,28 @@
 ---
-layout:     post
-title:      手写代码
-date:       2022-02-23
-author:     shaokang
+layout: post
+title: 手写代码
+date: 2022-02-23
+author: shaokang
 catalog: true
 tags:
     - 复习
 ---
+
 ## Object.create
-```
+
+```js
 function create(obj) {
     function F() {}
-    F.prototype = obj
-    return new F()
+    F.prototype = obj;
+    return new F();
 }
 ```
 
 ## 实现 new
-```
+
+```js
 function myNew() {
-    const obj = {} // 1
+    const obj = {}; // 1
     const constructor = Array.prototype.shift.call(arguments);
     obj.__proto__ = constructor.prototype;
     const result = constructor.apply(obj, arguments);
@@ -27,7 +30,7 @@ function myNew() {
 }
 ```
 
-```
+```js
 function myNew() {
     const constructor = Array.prototype.shift.call(arguments);
     const obj = Object.create(constructor.prototype);
@@ -37,10 +40,11 @@ function myNew() {
 ```
 
 ## 实现柯里化
-```
+
+```js
 function myCurry(fn, args) {
     var len = fn.length;
-    var args = args || []
+    var args = args || [];
     return function () {
         var _args_ = args.concat(Array.prototype.slice.call(arguments));
 
@@ -49,12 +53,29 @@ function myCurry(fn, args) {
         }
 
         return fn.apply(this, fn, _args);
-    }
+    };
+}
+```
+
+## 实现 add(1)(2)(3)
+
+```js
+function add(...args){
+		let func = function (..._args) {
+			return add(...args, ..._args);
+		}
+
+		func.toString() = function () {
+			return args.reduce((a,b)=>a+b)
+		}
+
+		return func;
 }
 ```
 
 ## 防抖和节流
-```
+
+```js
 function debounce(fn, wait) {
     let timer = null;
     return function () {
@@ -122,41 +143,86 @@ function throttle(fn, wait) {
 
 ## apply、call、bind
 
-```
-Function.prototype.myCall = function(context) {
-    if (typeof this !== "function") {
-        console.error("type error");
+```js
+Function.prototype.myCall = function (context) {
+    if (typeof this !== 'function') {
+        console.error('type error');
     }
     const args = [...arguments].slice(1);
     context = context || window;
     context.fn = this;
-    const result = result = context.fn(...args);
+    const result = (result = context.fn(...args));
     delete context.fn;
     return result;
-}
+};
 
 // apply 函数实现
-Function.prototype.myApply = function(context) {
-    if (typeof this !== "function") {
-        throw new TypeError("Error");
+Function.prototype.myApply = function (context) {
+    if (typeof this !== 'function') {
+        throw new TypeError('Error');
     }
 
     context = context || window;
     context.fn = this;
     let result = null;
     if (arguments[1]) {
-        result = context.fn()
-    }
-    else {
-        result = context.fn(arguments[1])
+        result = context.fn();
+    } else {
+        result = context.fn(arguments[1]);
     }
     delete context.fn;
     return result;
 };
+
+Function.prototype.myBind = function (context) {
+    if (typeof this !== 'function') {
+        throw new TypeError('Error');
+    }
+    const args = [...arguments].slice(1);
+    const self = this;
+    return function F() {
+        return self.apply(
+            this instanceof F ? this : context,
+            args.concat(...arguments)
+        );
+    };
+};
+
+Function.prototype.myBind = function (context) {
+    if (typeof this !== 'function') {
+        throw new TypeError('Error');
+    }
+    // this 指向调用者
+    var self = this;
+    // 实现第2点，因为第1个参数是指定的this,所以只截取第1个之后的参数
+    var args = Array.prototype.slice.call(arguments, 1);
+
+    // 创建一个空对象
+    var fNOP = function () {};
+
+    // 实现第3点,返回一个函数
+    var fBound = function () {
+        // 实现第4点，获取 bind 返回函数的参数
+        var bindArgs = Array.prototype.slice.call(arguments);
+        // 然后同传入参数合并成一个参数数组，并作为 self.apply() 的第二个参数
+        return self.apply(
+            this instanceof fNOP ? this : context,
+            args.concat(bindArgs)
+        );
+        // 注释1
+    };
+
+    // 注释2
+    // 空对象的原型指向绑定函数的原型
+    fNOP.prototype = this.prototype;
+    // 空对象的实例赋值给 fBound.prototype
+    fBound.prototype = new fNOP();
+    return fBound;
+};
 ```
 
-
 ## 异步任务调度
+
 ```
 function asyncRetry(fn, times, timeout = 0) {
   // fn必需
@@ -193,100 +259,106 @@ function asyncRetry(fn, times, timeout = 0) {
 ```
 
 ## 正则
+
 下划线转驼峰
+
 ```js
 function underscoreToCamelCase(str) {
-  return str.replace(/_([a-z])/g, function(match, group) {
-    return group.toUpperCase();
-  });
+    return str.replace(/_([a-z])/g, function (match, group) {
+        return group.toUpperCase();
+    });
 }
 ```
+
 驼峰转下划线
+
 ```js
 function camelCaseToUnderscore(str) {
-  return str.replace(/([A-Z])/g, function(match, group) {
-    return "_" + group.toLowerCase();
-  });
+    return str.replace(/([A-Z])/g, function (match, group) {
+        return '_' + group.toLowerCase();
+    });
 }
 ```
 
 ## 实现 flat 方法
+
 ```js
 function flat(arr) {
-  let result = [];
-  for (let i = 0; i < arr.length; i++) {
-    const cur = arr[i];
+    let result = [];
+    for (let i = 0; i < arr.length; i++) {
+        const cur = arr[i];
 
-    if (Array.isArray(cur)) {
-      result = result.concat(flat(cur))
+        if (Array.isArray(cur)) {
+            result = result.concat(flat(cur));
+        } else {
+            result.push(cur);
+        }
     }
-    else {
-      result.push(cur);
-    }
-  }
-  return result;
+    return result;
 }
 ```
 
 指定扁平化的层次
+
 ```js
 function customFlat(arr, depth = 1) {
-  let result = [];
+    let result = [];
 
-  function flatten(arr, currDepth) {
-    for (let i = 0; i < arr.length; i++) {
-      if (Array.isArray(arr[i]) && currDepth < depth) {
-        flatten(arr[i], currDepth + 1); // 递归调用 flatten 方法，并增加当前深度
-      } else {
-        result.push(arr[i]);
-      }
+    function flatten(arr, currDepth) {
+        for (let i = 0; i < arr.length; i++) {
+            if (Array.isArray(arr[i]) && currDepth < depth) {
+                flatten(arr[i], currDepth + 1); // 递归调用 flatten 方法，并增加当前深度
+            } else {
+                result.push(arr[i]);
+            }
+        }
     }
-  }
 
-  flatten(arr, 0);
+    flatten(arr, 0);
 
-  return result;
+    return result;
 }
 ```
 
 ## 洋葱模型
+
 ```js
 async function mid1(ctx, next) {
-  console.log(1);
-  await next();
-  console.log(4);
+    console.log(1);
+    await next();
+    console.log(4);
 }
 
 async function mid2(ctx, next) {
-  console.log(2);
-  await next();
-  console.log(5);
+    console.log(2);
+    await next();
+    console.log(5);
 }
 
 async function mid3(ctx, next) {
-  console.log(3);
-  await next();
-  console.log(6);
+    console.log(3);
+    await next();
+    console.log(6);
 }
 
 function compose(middleware) {
-  return function (ctx) {
-    async function dispatch(i) {
-      if (i === middleware.length) {
-        // 所有中间件函数执行完毕
-        return;
-      }
+    return function (ctx) {
+        async function dispatch(i) {
+            if (i === middleware.length) {
+                // 所有中间件函数执行完毕
+                return;
+            }
 
-      try {
-        const fn = middleware[i];
-        await fn(ctx, () => dispatch(i + 1));
-      } catch (err) {
-        console.error(err);
-      }
-    }
+            try {
+                const fn = middleware[i];
+                await fn(ctx, () => dispatch(i + 1));
+            } catch (err) {
+                console.error(err);
+            }
+        }
 
-    return dispatch(0);
-  }
+        return dispatch(0);
+    };
 }
 
 const middleware = [mid1, mid2, mid3];
@@ -294,10 +366,13 @@ compose(middleware)({});
 ```
 
 ## 深拷贝
+
 考虑内置对象 Date、RegExp 和循环引用的问题
 
 ```js
-const isObject = (target) => (typeof target === "object" || typeof target === "function") && target !== null;
+const isObject = target =>
+    (typeof target === 'object' || typeof target === 'function') &&
+    target !== null;
 
 function deepClone(target, map = new WeakMap()) {
     if (map.get(target)) {
@@ -311,7 +386,7 @@ function deepClone(target, map = new WeakMap()) {
         return new constructor(target);
     }
     if (isObject(target)) {
-        map.set(target, true);  // 为循环引用的对象做标记
+        map.set(target, true); // 为循环引用的对象做标记
         const cloneTarget = Array.isArray(target) ? [] : {};
         for (let prop in target) {
             if (target.hasOwnProperty(prop)) {
@@ -319,8 +394,7 @@ function deepClone(target, map = new WeakMap()) {
             }
         }
         return cloneTarget;
-    }
-    else {
+    } else {
         return target;
     }
 }
