--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -1,17 +1,21 @@
 ---
-layout:     post
-title:      算法
-date:       2022-02-23
-author:     shaokang
+layout: post
+title: 算法
+date: 2022-02-23
+author: shaokang
 catalog: true
 tags:
     - 复习
 ---
+
 ## 引言
+
 最近在看一本算法书《labuladong 的算法小抄》，作者对各种算法问题提炼出了基础的解法框架，能够帮助读者快速理解各算法中的精髓。这里我将此记录下来，帮助自己日后快速回顾。
 
 ## 回溯算法
+
 ### 核心框架
+
 ```js
 result = [];
 def backtrack( 路径，选择列表 ):
@@ -25,12 +29,13 @@ def backtrack( 路径，选择列表 ):
 ```
 
 ### 经典例子：全排列问题
+
 ```js
 let permute = function (nums) {
     const result = [];
     backtrack(nums, arr, result);
     return result;
-}
+};
 
 let backtrack = function (nums, track, result) {
     if (track.length === nums.length) {
@@ -47,11 +52,13 @@ let backtrack = function (nums, track, result) {
         backtrack(nums, track, result);
         track.pop();
     }
-}
+};
 ```
 
 ## 广度优先遍历框架
+
 ### 核心框架：
+
 ```java
 int BFS(Node start, Node target) {
     Queue<Node> q; // 核心数据结构
@@ -86,8 +93,9 @@ int BFS(Node start, Node target) {
 ```
 
 ### 经典问题：二叉树的最小高度
+
 ```js
-var BFS = function(root) {
+var BFS = function (root) {
     if (root === null) return 0;
     var queue = [root];
     var depth = 1;
@@ -108,14 +116,16 @@ var BFS = function(root) {
         }
         depth++;
     }
-}
+};
 ```
 
 ## 深度优先遍历框架
+
 深度优先遍历其实就是递归的过程
 例：二叉树的先序遍历
 
 ### 递归
+
 ```js
 void traverse(TreeNode root) {
     if (root === null) return;
@@ -129,6 +139,7 @@ void traverse(TreeNode root) {
 ```
 
 ### 遍历
+
 ```c++
 void traverse(TreeNode root) {
     if (root === null) return;
@@ -156,22 +167,24 @@ void traverse(TreeNode root) {
 ```
 
 ## 排序算法
+
 ### 快排
+
 ```js
 function quickSort(arr) {
     // 终止条件。arr 数组小于等于 1
-    if (arr.length <= 1)  {
+    if (arr.length <= 1) {
         return arr;
     }
     var pivotIndex = Math.floor(arr.length / 2);
     // splice 返回的是一个数组
     var pivot = arr.splice(pivotIndex, 1)[0];
-    var left = [],right = [];
+    var left = [],
+        right = [];
     for (var i = 0; i < arr.length; i++) {
         if (arr[i] < pivot) {
             left.push(arr[i]);
-        }
-        else {
+        } else {
             right.push(arr[i]);
         }
     }
@@ -180,6 +193,7 @@ function quickSort(arr) {
 ```
 
 ### 归并排序
+
 ```js
 function mergeSort(arr) {
     if (arr.length <= 1) {
@@ -195,19 +209,19 @@ function merge(left, right) {
     while (left.length && right.length) {
         if (left[0] < right[0]) {
             res.push(left.shift());
-        }
-        else {
+        } else {
             res.push(right.shift());
         }
     }
 
     return res.concat(left).concat(right);
 }
-
 ```
 
 ## 滑动窗口
+
 ### 核心框架
+
 ```js
 let left = 0, right = 0;
 
@@ -221,7 +235,9 @@ while (right < s.length) {
     }
 }
 ```
+
 时间复杂度为 O（N）
+
 ```js
 const slidingWindow = function (s: string, t: string) {
     const need: Record<string, number> = {};
@@ -254,7 +270,9 @@ const slidingWindow = function (s: string, t: string) {
 ```
 
 ### 经典问题：字符串的排列
+
 判断 s1 的排列之一是 s2 的 子串。
+
 ```
 输入：s1 = "ab" s2 = "eidbaooo"
 输出：true
@@ -303,15 +321,17 @@ const checkInclusion = function (s1, s2) {
         }
     }
     return false;
-}
+};
 ```
 
 ## 动态规划
+
 动态规划分为以下几步：找到 "状态" 和 "选择" => 明确 dp 数组的定义 => 寻找 "状态" 之间的关系。
 
 通用技巧：数学归纳法
 
 ### 经典问题：最长递增子序列
+
 定义 dp，dp[i] 表示以 nums[i] 这个数结尾的最长递增子序列的长度。
 
 base case： dp[i] 初始值为 1。
@@ -329,7 +349,6 @@ for (let i = 0; i < nums.length; i++) {
 }
 ```
 
-
 ### 经典问题：最长回文子串
 
 dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
@@ -337,62 +356,66 @@ dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
 因为求 i,j 需要知道 i + 1, j - 1，所以 i 从 len 开始递减。并且 i 肯定是小于等于 j 的（这样才能构成字符串），j 一开始等于 i 就可以了。
 
 最后我们就计算出了 dp table（长方形）左下一半的值.
+
 ```js
-    const n = s.length;
-    const dp = new Array(n).fill(false).map(() => new Array(n).fill(false));
-    let maxLen = 0;
-    let start = 0;
-    let end = 0;
+const n = s.length;
+const dp = new Array(n).fill(false).map(() => new Array(n).fill(false));
+let maxLen = 0;
+let start = 0;
+let end = 0;
 
-    for (let i = n - 1; i >= 0 ; i--) {
-        for (let j = i; j < n; j++) {
-            if (s[i] === s[j]) {
-                if (j - i < 2) {
-                    dp[i][j] = true;
-                }
-                else if (dp[i + 1][j - 1]) {
-                    dp[i][j] = true;
-                }
+for (let i = n - 1; i >= 0; i--) {
+    for (let j = i; j < n; j++) {
+        if (s[i] === s[j]) {
+            if (j - i < 2) {
+                dp[i][j] = true;
+            } else if (dp[i + 1][j - 1]) {
+                dp[i][j] = true;
             }
+        }
 
-            if (dp[i][j]) {
-                if (j - i + 1 > maxLen) {
-                    maxLen = j - i + 1;
-                    start = i;
-                    end = j;
-                }
+        if (dp[i][j]) {
+            if (j - i + 1 > maxLen) {
+                maxLen = j - i + 1;
+                start = i;
+                end = j;
             }
         }
     }
+}
 
-    return s.substr(start, end - start + 1);
+return s.substr(start, end - start + 1);
 ```
 
 循环的条件也可以改一下
-```js
- for (let len = 1; len <= length; len++) //遍历所有的长度
-        for (let start = 0; start < length; start++) {
-            let j = len + i - 1;
-            // 如果右边界越界，就可以退出当前循环
-            if (j >= s.length) {
-                break;
-            }
 
-            if (s[i] != s[j]) {
-                dp[i][j] = false;
-            }
-            else {
-                if (j - i < 3) {
-                    dp[i][j] = true;
-                }
-                else {
-                    dp[i][j] = dp[i + 1][j - 1];
-                }
+```js
+for (
+    let len = 1;
+    len <= length;
+    len++ //遍历所有的长度
+)
+    for (let start = 0; start < length; start++) {
+        let j = len + i - 1;
+        // 如果右边界越界，就可以退出当前循环
+        if (j >= s.length) {
+            break;
+        }
+
+        if (s[i] != s[j]) {
+            dp[i][j] = false;
+        } else {
+            if (j - i < 3) {
+                dp[i][j] = true;
+            } else {
+                dp[i][j] = dp[i + 1][j - 1];
             }
         }
+    }
 ```
 
 ### 常见的动态规划状态转移方程
+
 以下是几个常见的动态规划问题和它们对应的状态转移方程示例：
 
 #### 斐波那契数列（Fibonacci Sequence）
@@ -421,7 +444,6 @@ dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
 
 否则，`dp[i][j] = max(dp[i-1][j], dp[i][j-1])`，其中 dp[i][j] 表示 str1 的前 i 个字符和 str2 的前 j 个字符的最长公共子序列的长度。
 
-
 #### 编辑距离（Edit Distance
 
 如果 word1[i] 等于 word2[j]，则 `dp[i][j] = dp[i-1][j-1]`；
@@ -436,11 +458,12 @@ dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
 
 如果 matrix[i][j] 等于 1，则 `dp[i][j] = min(dp[i-1][j], dp[i][j-1], dp[i-1][j-1]) + 1`；
 
-
 否则，`dp[i][j] = 0`，其中 dp[i][j] 表示以 matrix[i][j] 为右下角的最大正方形的边长。
 
 ## 二分查找
+
 ### 经典框架
+
 ```js
 function binarySearch(nums, target) {
     while (left <= right) {
@@ -448,11 +471,9 @@ function binarySearch(nums, target) {
 
         if (nums[mid] === target) {
             return mid;
-        }
-        else if (nums[mid] < target) {
+        } else if (nums[mid] < target) {
             left = mid + 1;
-        }
-        else {
+        } else {
             right = mid - 1;
         }
     }
@@ -460,7 +481,9 @@ function binarySearch(nums, target) {
 ```
 
 ### 经典二分查找
+
 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+
 ```js
 var search = function (nums, target) {
     let left = 0;
@@ -470,11 +493,9 @@ var search = function (nums, target) {
         const mid = Math.floor((left + right) / 2);
         if (nums[mid] === target) {
             return mid;
-        }
-        else if (nums[mid] < target) {
+        } else if (nums[mid] < target) {
             left = mid + 1;
-        }
-        else {
+        } else {
             right = mid - 1;
         }
     }
@@ -483,7 +504,9 @@ var search = function (nums, target) {
 ```
 
 ### 寻找左边界的二分查找
+
 nums 数组中可能有重复元素，找出最左侧的 target
+
 ```js
 var search = function (nums, target) {
     let left = 0;
@@ -495,8 +518,7 @@ var search = function (nums, target) {
         // const mid = left + Math.floor((left - right) / 2);
         if (nums[mid] < target) {
             left = mid + 1;
-        }
-        else {
+        } else {
             // 因为是要找最左侧的数，所以 = target 的时候还是要收紧边界
             // nums[mid] <= target 收缩右侧边界
             right = mid - 1;
@@ -512,6 +534,7 @@ var search = function (nums, target) {
 ```
 
 ### 寻找右边界的二分查找
+
 ```js
 var search = function (nums, target) {
     let left = 0;
@@ -521,8 +544,7 @@ var search = function (nums, target) {
         const mid = Math.floor((left + right) / 2);
         if (nums[mid] > target) {
             right = mid - 1;
-        }
-        else {
+        } else {
             // nums[mid] <= target 收缩左侧边界
             left = mid + 1;
         }
@@ -534,5 +556,10 @@ var search = function (nums, target) {
 
     return right;
 };
-
 ```
+
+## 相关的算法手册网址
+
+-   [代码随想录](https://programmercarl.com/)
+-   [labuladong 的算法笔记](https://labuladong.github.io/algo/home/)
+-   [算法通关手册](https://algo.itcharge.cn)
