--- a/_posts/2023-07-04-设计模式.md
+++ b/_posts/2023-07-04-设计模式.md
@@ -1,15 +1,19 @@
 ---
-layout:     post
-title:      设计模式
-date:       2023-07-04
-author:     shaokang
+layout: post
+title: 设计模式
+date: 2023-07-04
+author: shaokang
 header-img:
 catalog: true
 tags:
     - 设计模式
+    - 读书笔记
 ---
 
 ## 单例模式
+
+单例模式的定义是: 保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+
 ```js
 var Singleton = function (name) {
     this.name = name;
@@ -29,6 +33,8 @@ var b = Singleton.getInstance('sven2');
 alert(a === b); // true
 ```
 
+或者：
+
 ```js
 var Singleton = function (name) {
     this.name = name;
@@ -43,9 +49,10 @@ Singleton.getInstance = (function () {
             instance = new Singleton(name);
         }
         return instance;
-    }
+    };
 })();
 ```
+
 惰性单例：合适的时候才创建对象，且只创建唯一的。
 
 ```js
@@ -53,10 +60,191 @@ var getSingle = function (fn) {
     var result;
     return function () {
         return result || (result = fn.apply(this, arguments));
-    }
-}
+    };
+};
 ```
 
 ## 策略模式
-策略模式的定义是:定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
 
+策略模式的定义是: 定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+
+看一个例子：绩效为 S 的人年终奖有 4 倍工资，绩效为 A 的人年终奖有 3 倍工资，而绩效为 B 的人年终奖是 2 倍工资。写一段代码，计算员工的年终奖。
+
+将每一种计算方式定义成单独的函数
+
+```js
+var strategies = {
+    S: function (salary) {
+        return salary * 4;
+    },
+    A: function (salary) {
+        return salary * 3;
+    },
+    B: function (salary) {
+        return salary * 2;
+    },
+};
+
+var calculateBonus = function (level, salary) {
+    return strategies[level](salary);
+};
+console.log(calculateBonus('S', 20000));
+console.log(calculateBonus('A', 10000));
+```
+
+再看一个例子：用策略模式来重构表单校验。
+
+```js
+// 定义校验规则
+var strategies = {
+    isNonEmpty: function (value, errorMsg) {
+        if (!value) {
+            return errorMsg;
+        }
+    },
+    minLength: function (value, length, errorMsg) {
+        if (value.length < length) {
+            return errorMsg;
+        }
+    },
+    isMobile: function (value, errorMsg) {
+        if (!/^1[34578]\d{9}$/.test(value)) {
+            return errorMsg;
+        }
+    },
+};
+
+// 校验函数
+var Validator = function () {
+    this.cache = [];
+};
+
+Validator.prototype.add = function (dom, rule, errorMsg) {
+    var ary = rule.split(':');
+    this.cache.push(function () {
+        var strategy = ary.shift();
+        ary.unshift(dom.value);
+        ary.push(errorMsg);
+        return strategies[strategy].apply(dom, ary);
+    });
+};
+
+Validator.prototype.start = function () {
+    for (var i = 0, validatorFunc; (validatorFunc = this.cache[i++]); ) {
+        var msg = validatorFunc();
+        if (msg) {
+            return msg;
+        }
+    }
+};
+
+// 校验表单
+var v = new Validator();
+v.add(document.getElementById('username'), 'isNonEmpty', '用户名不能为空');
+v.add(
+    document.getElementById('username'),
+    'minLength:3',
+    '用户名长度不能小于 3 位'
+);
+v.add(document.getElementById('phoneNumber'), 'isMobile', '手机号码格式不正确');
+```
+
+### 优缺点
+
+优点：
+
+-   策略模式利用组合、委托和多态等技术和思想，可以有效地避免多重条件选择语句。
+-   策略模式提供了对开放—封闭原则的完美支持，将算法封装在独立的 strategy 中，使得它们易于切换，易于理解，易于扩展。
+-   策略模式中的算法也可以复用在系统的其他地方，从而避免许多重复的复制粘贴工作。
+-   在策略模式中利用组合和委托来让 Context 拥有执行算法的能力，这也是继承的一种更轻便的替代方案。
+
+缺点：
+
+-   策略模式将造成系统产生很多具体策略类，任何细小的变化都将导致系统要增加一个新的具体策略类。
+-   必须知道所有的策略类，并自行决定使用哪一个策略类，违反最少知识原则。
+
+## 代理模式
+
+代理模式是为一个对象提供一个代用品或占位符，以便控制对它的访问。
+
+虚拟代理实现图片预加载：
+
+```js
+var myImage = (function () {
+    var imgNode = document.createElement('img');
+    document.body.appendChild(imgNode);
+    return function (src) {
+        imgNode.src = src;
+    };
+})();
+
+var proxyImage = (function () {
+    var img = new Image();
+    img.onload = function () {
+        myImage(img.src);
+    };
+    return function (src) {
+        myImage('loading.gif');
+        img.src = src;
+    };
+})();
+proxyImage('1.jpg');
+```
+
+虚拟代理实现 console
+
+```js
+
+var miniConsole = (function () {
+    var cache = [];
+    var handler = function (ev) {
+        if (ev.keyCode === 113) {
+            var script = document.createElement('script');
+            script.onload = function () {
+                for (var i = 0, fn; fn = cache[i++];) {
+                    fn();
+                }
+            };
+            script.src = 'miniConsole.js';
+            document.getElementsByTagName('head')[0].appendChild(script);
+            document.body.removeEventListener('keydown', handler);// 只加载一次 miniConsole.js
+        }
+    };
+    document.body.addEventListener('keydown', handler, false);
+    return {
+        log: function () {
+            var args = arguments;
+            cache.push(function () {
+                return miniConsole.log.apply(miniConsole, args);
+            });
+        }
+    }
+})();
+miniConsole.log(11); // miniConsole.js 代码
+miniConsole = {
+    log: function () {
+        console.log(Array.prototype.join.call(arguments));
+    }
+};
+```
+
+为各种计算方式创建缓存代理
+
+```js
+/**************** 计算乘积 *****************/
+var mul = function () {
+    var a = 1;
+    for (var i = 0, len = arguments.length; i < len; i++) {
+        a *= arguments[i];
+    }
+    return a;
+}
+
+/**************** 计算加和 *****************/
+var plus = function () {
+    var a = 0;
+    for (var i = 0, len = arguments.length; i < len; i++) {
+        a += arguments[i];
+    }
+    return a;
+}
