--- a/_posts/2022-09-21-react.md
+++ b/_posts/2022-09-21-react.md
@@ -327,5 +327,4 @@ const DeepChild = () => {
 常见的 React 状态管理库如 Redux、Mobx、Recoil.
 参考[文档](https://juejin.cn/post/7026232873233416223#heading-8)
 
-最新的一些状态管理库 Zustand、Recoil、Jotai，对比：[2023 再谈前端状态管理
-](https://mp.weixin.qq.com/s/F6UAmEP9VXEHNZz7VWwxbA)
+最新的一些状态管理库 Zustand、Recoil、Jotai，对比：[2023 再谈前端状态管理](https://mp.weixin.qq.com/s/F6UAmEP9VXEHNZz7VWwxbA)
