--- a/_posts/2023-07-04-设计模式.md
+++ b/_posts/2023-07-04-设计模式.md
@@ -194,20 +194,19 @@ proxyImage('1.jpg');
 虚拟代理实现 console
 
 ```js
-
 var miniConsole = (function () {
     var cache = [];
     var handler = function (ev) {
         if (ev.keyCode === 113) {
             var script = document.createElement('script');
             script.onload = function () {
-                for (var i = 0, fn; fn = cache[i++];) {
+                for (var i = 0, fn; (fn = cache[i++]); ) {
                     fn();
                 }
             };
             script.src = 'miniConsole.js';
             document.getElementsByTagName('head')[0].appendChild(script);
-            document.body.removeEventListener('keydown', handler);// 只加载一次 miniConsole.js
+            document.body.removeEventListener('keydown', handler); // 只加载一次 miniConsole.js
         }
     };
     document.body.addEventListener('keydown', handler, false);
@@ -217,14 +216,14 @@ var miniConsole = (function () {
             cache.push(function () {
                 return miniConsole.log.apply(miniConsole, args);
             });
-        }
-    }
+        },
+    };
 })();
 miniConsole.log(11); // miniConsole.js 代码
 miniConsole = {
     log: function () {
         console.log(Array.prototype.join.call(arguments));
-    }
+    },
 };
 ```
 
@@ -238,7 +237,7 @@ var mul = function () {
         a *= arguments[i];
     }
     return a;
-}
+};
 
 /**************** 计算加和 *****************/
 var plus = function () {
@@ -247,4 +246,5 @@ var plus = function () {
         a += arguments[i];
     }
     return a;
-}
+};
+```
